docs updated on ROCM topic, slight fixed GpuBindings api to not use cuda for common methods